assets/css/style.scss
---
---

// https://github.com/pages-themes/slate/blob/master/_sass/jekyll-theme-slate.scss
@import "{{ site.theme }}";

// General
p
{
  text-align: justify;
}

a
{
  color: #0E6BB7;
}

// Navigation
nav
{
  box-shadow: 0 0 5px rgba(219, 219, 219, 0.5);
  margin-left: 0px;
  background: #fff;
}

.dropdown:hover .dropdown-menu
{
  display:block;
}

.dropdown:hover .dropdown-item-rep 
{
  position: left;
  font-weight: bolder;
}

.nav-link
{
  color: #898b8d;
}

// Main content
.inner
{
  max-width: 70%;
  text-align: justify;
  text-align: left;
  margin-left: 5%;
  padding-top: 20px;
}

// Table of content
.side-right
{
  position: fixed;
  top: 90px;
  left: 80%;
  width: 20%;
  box-shadow: 0 0 5px rgba(219, 219, 219, 0.5);
  text-align: right;
  white-space: nowrap;
}

#table-of-content
{
  text-align: left;
  a {
    text-decoration: none;
    color: #6EC1E4;
  }
  a:hover {
    font-weight: bold;
  }
}

// Footer
body
{
  // Keeping footer down
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

#footer {
  margin-top: auto;
  position: relative;
  bottom: 0;
  width: 100%; 
  padding-top: 10px;
  box-shadow: 0 0 5px rgba(219, 219, 219, 0.5);
}

#forkme-banner
{
  display: block;
  position: absolute;
  top:0;
  right: 10px;
  z-index: 10;
  padding: 10px 50px 10px 10px;
  color: #fff;
  background: url('../images/github.png') #4986c3 no-repeat 95% 50%;
  font-weight: 700;
  box-shadow: 0 0 10px rgba(0,0,0,.5);
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

// Markdown
.markdown-body h1,
.markdown-body h2,
.markdown-body h3,
.markdown-body h4,
.markdown-body h5,
.markdown-body h6,
.markdown-body p,
.markdown-body pre,
.markdown-body ul,
.markdown-body ol,
.markdown-body dl,
.markdown-body table,
.markdown-body blockquote {
  margin-bottom: 20px;
}

.markdown-body h1,
.markdown-body h2,
.markdown-body h3,
.markdown-body h4,
.markdown-body h5,
.markdown-body h6 {
  font-weight: bold;
}

.markdown-body h1 {
  font-size: 28px;
}

.markdown-body h2 {
  font-size: 24px;
}

.markdown-body h3 {
  font-size: 20px;
}

.markdown-body h4 {
  font-size: 18px;
}

.markdown-body h5 {
  font-size: 16px;
}

.markdown-body h3li {
  font-size: 20px;
  font-weight: bold;
}

.markdown-body pre {
  padding: 10px 70px 10px 0;
  margin-left: -20px;
  margin-right: -20px;
  font-family: 'Monaco', 'Lucida Console', monospace;
  font-size: 13px;
  line-height: 20px;
  box-shadow: inset 0 0 5px #000;
  word-wrap: break-word;
  background-color:#3b3b3b;
  color: #d6d6d6;
}

.markdown-body pre.lines {
  font-size: 12px;
  margin:0 10px 0 -20px;
  padding: 10px;
  float:  left;
  display: block;
  text-align: right;
  box-shadow: none;
  background-color:#2a2a2a;
  color: #d6d6d6;
}

.markdown-body ul,
.markdown-body ol {
  padding-left: 40px;
}

.markdown-body ul {
  list-style-type: disc;
}

.markdown-body ol {
  list-style-type: decimal;
}

.markdown-body li,
.markdown-body li p,
.markdown-body dd,
.markdown-body dd p {
  margin-bottom: 10px;
}

.markdown-body li pre,
.markdown-body li pre.lines,
.markdown-body dd pre,
.markdown-body dd pre.lines {
  margin-left: -35px;
}

.markdown-body dt {
  font-weight: bold;
  font-style: italic;
}

.markdown-body dd {
  margin-left: 15px;
}

.markdown-body table {
  border-width:1px; 
  border-style:solid; 
  border-color:black;
  width:80%;
}

.markdown-body tbody {
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  background-color: #ffffff;
}

.markdown-body td {
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  padding: 5px;
}

.markdown-body td:first-child,
.markdown-body th:first-child {
  width: 30%;
  padding-left: 20px;
}

.markdown-body td:last-child {
  border-right: 0 none;
}

.markdown-body th {
  font-size: 18px;
  font-weight: bold;
  text-align: left;
  padding: 5px;
}

.markdown-body tt {
  background-color:#ffffff;
  color: #ffffff;
  padding: 2px 3px;
}

.markdown-body blockquote {
  font-style: italic;
  font-family:Georgia, serif;
  font-size: 17px;
  border-top: 3px solid #4d50ff;
  border-bottom: 3px solid #4d50ff;
  padding: 10px 20px;
  padding-left: 50px;
}

.markdown-body blockquote:before {
  font-style: italic;
  font-family: Georgia, serif;
  font-size: 90px;
  height: 90px;
  margin-left: -60px;
  margin-top: -25px;
  content: "‟";
  display: block;
  float: left;
}

.markdown-body img {
  max-width: 100%;
  box-sizing: border-box;
}

.markdown-body kbd {
  background-color: #ffffff;
  border: 1px solid #c6cbd1;
  border-bottom-color: #ffffff;
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 #ffffff;
  color: #ffffff;
  display: inline-block;
  font-size: 11px;
  line-height: 10px;
  padding: 3px 5px;
  vertical-align: middle;
}

// Auto section number
#page h1 {
  counter-reset: h1
}

#page h2 {
  counter-reset: h2
}

#page h2:before{
  counter-increment: h1;
  content: counter(h1) ". "
}

#page h3:before {
  counter-increment: h2;
  content: counter(h1) "." counter(h2) ". " 
}

@media screen and (max-width: 1500px) {
 
  .inner
  {
    max-width: 60%;
    margin-left: 5%;
  }
  
  .side-right
  {
    left: 70%;
    width: 30%;
  }
}

// Screen adaptation
@media screen and (max-width: 500px) {
 
  #display_view_on_github
  {
    display: none;
  }

  #forkme-banner
  {
    display: block;
    position: absolute;
    top:0;
    right: 10px;
    z-index: 10;
    width: 35px;
    height: 35px;
    padding: 0px;
    color: #4986c3;
    background: url('../images/github.png') #fff no-repeat;
    background-position: 3px 2px;
    box-shadow: 0 0 10px rgba(0,0,0,.5);
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
  }
}

